--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "latest",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
+    "qrcode.react": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
